--- a/Welcome_To_Colaboratory.ipynb
+++ b/Welcome_To_Colaboratory.ipynb
@@ -51,12 +51,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "zwFnJsE6vjf8"
+        "id": "zwFnJsE6vjf8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e0955296-4efb-4cfc-d932-1200b4d19ece"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Hello\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -350,6 +364,15 @@
         "- [Multilingual Universal Sentence Encoder Q&A](https://tensorflow.org/hub/tutorials/retrieval_with_tf_hub_universal_encoder_qa): Use a machine learning model to answer questions from the SQuAD dataset.\n",
         "- [Video Interpolation](https://tensorflow.org/hub/tutorials/tweening_conv3d): Predict what happened in a video between the first and the last frame.\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mSKaAGUSBtoF"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
