--- a/Welcome_To_Colaboratory.ipynb
+++ b/Welcome_To_Colaboratory.ipynb
@@ -91,6 +91,30 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "fibonacci = list(map(lambda x: x if x<=1 else (x-1)+(x-2), range(1,11)))\n",
+        "print(fibonacci)"
+      ],
+      "metadata": {
+        "id": "t1_3WCrvGGh1",
+        "outputId": "4379167d-f4cc-48eb-844d-37f62b486ca4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 1, 3, 5, 7, 9, 11, 13, 15, 17]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "GJBs_flRovLc"
