--- a/Welcome_To_Colaboratory.ipynb
+++ b/Welcome_To_Colaboratory.ipynb
@@ -97,11 +97,11 @@
         "print(fibonacci)"
       ],
       "metadata": {
-        "id": "t1_3WCrvGGh1",
-        "outputId": "4379167d-f4cc-48eb-844d-37f62b486ca4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t1_3WCrvGGh1",
+        "outputId": "4379167d-f4cc-48eb-844d-37f62b486ca4"
       },
       "execution_count": 5,
       "outputs": [
@@ -128,6 +128,66 @@
         "The document you are reading is not a static web page, but an interactive environment called a **Colab notebook** that lets you write and execute code.\n",
         "\n",
         "For example, here is a **code cell** with a short Python script that computes a value, stores it in a variable, and prints the result:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "class flashcard:\n",
+        "\tdef __init__(self):\n",
+        "\n",
+        "\t\tself.fruits={'apple':'red',\n",
+        "\t\t\t\t\t'orange':'orange',\n",
+        "\t\t\t\t\t'watermelon':'green',\n",
+        "\t\t\t\t\t'banana':'yellow'}\n",
+        "\n",
+        "\tdef quiz(self):\n",
+        "\t\twhile (True):\n",
+        "\n",
+        "\t\t\tfruit, color = random.choice(list(self.fruits.items()))\n",
+        "\n",
+        "\t\t\tprint(\"What is the color of {}\".format(fruit))\n",
+        "\t\t\tuser_answer = input()\n",
+        "\n",
+        "\t\t\tif(user_answer.lower() == color):\n",
+        "\t\t\t\tprint(\"Correct answer\")\n",
+        "\t\t\telse:\n",
+        "\t\t\t\tprint(\"Wrong answer\")\n",
+        "\n",
+        "\t\t\toption = int(input(\"enter 0 , if you want to play again : \"))\n",
+        "\t\t\tif (option):\n",
+        "\t\t\t\tbreak\n",
+        "\n",
+        "print(\"welcome to fruit quiz \")\n",
+        "fc=flashcard()\n",
+        "fc.quiz()\n"
+      ],
+      "metadata": {
+        "id": "kkRqvJ3ePHPO",
+        "outputId": "a336f4b6-baa5-4f41-b586-1e8fbd907471",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "welcome to fruit quiz \n",
+            "What is the color of apple\n",
+            "red\n",
+            "Correct answer\n",
+            "enter 0 , if you want to play again : 0\n",
+            "What is the color of banana\n",
+            "green\n",
+            "Wrong answer\n",
+            "enter 0 , if you want to play again : 3\n"
+          ]
+        }
       ]
     },
     {
